src/test/error/diff_type.c
int main() {
    int a;
    a = "123";
}